Add Loading Screens

--- a/kmkscores/public/index.html
+++ b/kmkscores/public/index.html
@@ -9,6 +9,34 @@
       name="GoalTrack"
       content="Live and up-to-date Football scores from around the world."
     />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <meta name="twitter:site" content="@user" />
+
+    <meta name="twitter:creator" content="@user" />
+
+    <meta name="twitter:title" content="GoalTrack" />
+
+    <meta
+      name="twitter:description"
+      content="Live football results up-to-the-minute"
+    />
+
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo-icon.png" />
+
+    <meta property="og:title" content="GoalTrack" />
+
+    <meta
+      property="og:description"
+      content="Live football results up-to-the-minute"
+    />
+
+    <meta property="og:image" content="%PUBLIC_URL%/logo-icon.png" />
+    <meta property="og:url" content="goaltrack.live" />
+    <meta property="og:site_name" content="GoalTrack" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="article" />
+    <meta property="fb:app_id" content="ID_APP_FACEBOOK" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
